@startuml

title __DI's Class Diagram__\n

  namespace com.cleanup.todoc {
    namespace di {
      class com.cleanup.todoc.di.TodocApplication {
          {static} + sTodocContainer : TodocContainer
          + onCreate()
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace di {
      class com.cleanup.todoc.di.TodocContainer {
          + TodocContainer()
          + getProjectRepository()
          + getTaskRepository()
      }
    }
  }
  

  namespace com.cleanup.todoc {
    namespace di {
      class com.cleanup.todoc.di.ViewModelFactory {
          {static} - factory : ViewModelFactory
          - mExecutor : Executor
          + create()
          {static} + getInstance()
          - ViewModelFactory()
      }
    }
  }
  

  com.cleanup.todoc.di.TodocApplication -up-|> android.app.Application
  com.cleanup.todoc.di.TodocContainer o-- com.cleanup.todoc.model.repository.ProjectRepository : mProjectRepository
  com.cleanup.todoc.di.TodocContainer o-- com.cleanup.todoc.model.repository.TaskRepository : mTaskRepository
  com.cleanup.todoc.di.ViewModelFactory .up.|> androidx.lifecycle.ViewModelProvider.Factory
  com.cleanup.todoc.di.ViewModelFactory o-- com.cleanup.todoc.model.repository.ProjectRepository : projectRepository
  com.cleanup.todoc.di.ViewModelFactory o-- com.cleanup.todoc.model.repository.TaskRepository : taskRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
